--- a/index.html
+++ b/index.html
@@ -25,9 +25,7 @@
             </ul>
         </nav>
     </div>
-    <div id="mainpic">
-    <img src="images/digital-marketing-meeting.jpg">
-    </div>
+    <div class="hero"></div>
     <div class="content">
         <div id="search-engine-optimization">
             <img src="images/search-engine-optimization.jpg" class="float-left" />
