--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
             </ul>
         </nav>
     </div>
+
     <div class="hero"></div>
     <div class="content">
+      <section>  
         <div id="search-engine-optimization">
             <img src="images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
@@ -34,6 +36,9 @@
                 The Dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </div>
+    </section>
+    
+    <section>
         <div id="online-reputation-management" class="online-reputation-management">
             <img src="images/online-reputation-management.jpg" class="float-right" />
             <h2>Online Reputation Management</h2>
@@ -41,6 +46,9 @@
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </div>
+    </section>
+
+    <section>
         <div id="social-media-marketing" class="social-media-marketing">
             <img src="images/social-media-marketing.jpg" class="float-left" />
             <h2>Social Media Marketing</h2>
@@ -48,8 +56,11 @@
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
         </div>
-    </div>
+    </section>
+ </div>
+
     <div class="benefits">
+    <section>
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
             <img src="images/lead-generation.png" />
@@ -57,6 +68,9 @@
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </div>
+    </section>
+
+    <section>
         <div class="benefit-brand">
             <h3>Brand Awareness</h3>
             <img src="images/brand-awareness.png" />
@@ -64,6 +78,9 @@
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </div>
+    </section>
+
+    <section>
         <div class="benefit-cost">
             <h3>Cost Management</h3>
             <img src="images/cost-management.png"></img>
@@ -71,6 +88,8 @@
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
         </div>
+    </section>
+    
     </div>
     <div class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
