--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>website</title>
+    <title>Horiseon | Welcome</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -30,7 +30,7 @@
     <div class="content">
       <section>  
         <div id="search-engine-optimization">
-            <img src="images/search-engine-optimization.jpg" class="float-left" />
+            <img src="images/search-engine-optimization.jpg" alt="Search Engine Optomization" class="float-left">
             <h2>Search Engine Optimization</h2>
             <p>
                 The Dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
@@ -40,7 +40,7 @@
     
     <section>
         <div id="online-reputation-management" class="online-reputation-management">
-            <img src="images/online-reputation-management.jpg" class="float-right" />
+            <img src="images/online-reputation-management.jpg" alt="Online Requtation Management" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
@@ -50,7 +50,7 @@
 
     <section>
         <div id="social-media-marketing" class="social-media-marketing">
-            <img src="images/social-media-marketing.jpg" class="float-left" />
+            <img src="images/social-media-marketing.jpg" alt="Social Media Marketing" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
@@ -63,7 +63,7 @@
     <section>
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
-            <img src="images/lead-generation.png" />
+            <img src="images/lead-generation.png" alt="Lead Generation" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
@@ -83,7 +83,7 @@
     <section>
         <div class="benefit-cost">
             <h3>Cost Management</h3>
-            <img src="images/cost-management.png"></img>
+            <img src="images/cost-management.png" alt="Cost Management"></img>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
@@ -98,5 +98,4 @@
         </p>
     </div>
 </body>
-
 </html>
